; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_test_local_addr.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_test_local_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.route_gateway_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@TLA_LOCAL = common dso_local global i32 0, align 4
@TLA_NONLOCAL = common dso_local global i32 0, align 4
@TLA_NOT_IMPLEMENTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test_local_addr(i32 %0, %struct.route_gateway_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.route_gateway_info*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.route_gateway_info* %1, %struct.route_gateway_info** %5, align 8
  %6 = load %struct.route_gateway_info*, %struct.route_gateway_info** %5, align 8
  %7 = icmp ne %struct.route_gateway_info* %6, null
  br i1 %7, label %8, label %21

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.route_gateway_info*, %struct.route_gateway_info** %5, align 8
  %11 = getelementptr inbounds %struct.route_gateway_info, %struct.route_gateway_info* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.route_gateway_info*, %struct.route_gateway_info** %5, align 8
  %15 = call i64 @local_route(i32 %9, i32 -1, i32 %13, %struct.route_gateway_info* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %8
  %18 = load i32, i32* @TLA_LOCAL, align 4
  store i32 %18, i32* %3, align 4
  br label %23

19:                                               ; preds = %8
  %20 = load i32, i32* @TLA_NONLOCAL, align 4
  store i32 %20, i32* %3, align 4
  br label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @TLA_NOT_IMPLEMENTED, align 4
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %21, %19, %17
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i64 @local_route(i32, i32, i32, %struct.route_gateway_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
